resolve conflicts on ie8.scss

--- a/_sass/ie8.scss
+++ b/_sass/ie8.scss
@@ -8,27 +8,6 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
 /* Button */
-<<<<<<< HEAD
-<<<<<<< HEAD
-
-	input[type="submit"],
-	input[type="reset"],
-	input[type="button"],
-	button,
-	.button {
-		border: solid 2px _palette(orange);
-	}
-
-=======
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
-button,
-.button {
-	border: solid 2px _palette(accent);
-}
->>>>>>> 7a9e7838524d6be595c245bbdce02acb251b227a
-=======
 input[type="submit"],
 input[type="reset"],
 input[type="button"],
@@ -37,7 +16,6 @@ button,
 	border: solid 2px _palette(orange);
 }
 
->>>>>>> 34c18733f11c26f2465d907ea08c5a3b77b4c644
 /* Posts */
 .posts {
 	article {
